--- a/jd/paeg.html
+++ b/jd/paeg.html
@@ -7,9 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
-	大大阿萨德 大大ad阿达啊阿达阿达啊
-	我给你删除了放大镜的效果请查看
-	div<div>	
->>>>>>> new2
+	alert(111)
+
 </body>
 </html>
